@@ -30,7 +30,9 @@ libswfdec_@SWFDEC_MAJORMINOR@_la_LDFLAGS = \
 
 libswfdec_@SWFDEC_MAJORMINOR@_la_LIBADD = jpeg/libjpeg.la
 
-pkginclude_HEADERS = swfdec.h \
+libswfdec_@SWFDEC_MAJORMINOR@includedir = $(includedir)/swfdec-@SWFDEC_MAJORMINOR@
+
+libswfdec_@SWFDEC_MAJORMINOR@include_HEADERS = swfdec.h \
 	color.h proto.h swfdec_buffer.h swfdec_debug.h \
 	swfdec_button.h swfdec_decoder.h swfdec_image.h \
 	swfdec_internal.h swfdec_layer.h swfdec_object.h \
