@@ -1,7 +1,7 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=@includedir@/swfdec
+includedir=@includedir@/swfdec-@SWFDEC_MAJORMINOR@
 
 Name: swfdec
 Description: Decodes SWF (Flash) files
